k3s/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.d-kline.org`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: traefik
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: d-kline-org-tls
